<resources>
    <string name="app_name">eshop</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_compare">Compare</string>
    <string name="title_cart">My Cart</string>
    <string name="title_profile">Profile</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_browse">Browse</string>
    <string name="search">Search</string>
    <string name="add">Add</string>
    <string name="empty">Empty\n\nAdd items in the shop</string>
</resources>
