<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_browse"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_browse" />


    <item
        android:id="@+id/navigation_compare"
        android:icon="@mipmap/ic_compare"
        android:title="@string/title_compare" />

    <item
        android:id="@+id/navigation_cart"
        android:icon="@mipmap/ic_cart"
        android:title="@string/title_cart" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@mipmap/ic_profile"
        android:title="@string/title_profile" />

</menu>
