<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

     android:layout_height="match_parent"
     android:layout_width="match_parent">


    <LinearLayout
        android:id="@+id/alert_dialog"
        android:name="com.app.mdo.tasker.ClipboardService"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@color/transparent"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:paddingTop="20dp"
        tools:context="com.syrmapp.sagi.translatesms.SettingActivity">


        <LinearLayout
            android:id="@+id/imageView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/app_name"
                android:elevation="3dp"
                app:srcCompat="@mipmap/ic_launcher" />

            <TextView
                android:id="@+id/spam_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="3dp"
                android:text="@string/search"
                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/asymmetric_grid_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <EditText
            android:id="@+id/text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="40dp"
            android:elevation="1dp"
            android:ems="10"
            android:inputType="textMultiLine"
            android:padding="5dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/add_to_spam"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="0.2dp"
                android:layout_marginStart="0.2dp"
                android:layout_weight="1"
                android:background="@android:color/white"
                android:text="@string/add"
                android:textColor="@color/colorPrimary" />

            <ImageButton
                android:id="@+id/search"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:background="@mipmap/ic_search"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true">
            </ImageButton>
        </LinearLayout>

    </LinearLayout>
</ScrollView>
